fix horizontally alignment

--- a/src/components/atoms/AddToCalendarButton/style.css
+++ b/src/components/atoms/AddToCalendarButton/style.css
@@ -1,4 +1,5 @@
 .add-to-calendar-wrapper {
+    align-content: center;
     position: relative;
     display: inline;
 }
